[Changes for 0.23 - 18 Oct, 2004]

* New: commit / smerge -P creats patch, and obsoletes unintuitive svk
  patch create.

* New: svk merge now supports -cN which means -r N-1:N.

* New: svk mirror --recover. [Autrijus]

* Proper svn:eol-style support with the same semantics as svn. [Autrijus]

* The SVK Help system, as SVK/Help/[lang/]/*.pod. [Autrijus]

* The log produced by smerge -l no longer contains the duplicated logs
  that were merged from the current target.

* smerge -I and repeated smerge now works on checkout.

* commit --import or import now treats obstructed items as replaced.

* Don't skip explicit targets on svk add.

* Correctly obtain the user name on non-unix platforms. [Autrijus]

* Fix pool abuse in history tracing code. [Autrijus]

* Fix smerge -IB.

* svk patch delete now works.

[Changes for 0.22 - 4 Oct, 2004]

* Interactive merge support is now default. [Autrijus]

* svk patch apply.

* Modular external merge tool support, with the following supported:
  AraxisMerge, Emacs, FileMerge, GtkDiff, Guiffy, KDiff3, Meld,
  P4WinMerge, TkDiff, TortoiseMerge, XXDiff. [Autrijus]

* Patch format changed, it's now unidiff with FreezeThaw-serialized
  SVK::Patch. [Autrijus]

* merge and smerge now supports -f and -t options to deduce copy
  source as target. [Eric Lindvall]

* Experimental depotpath auto-vivification from URL. [Autrijus]
  This allows you to svk checkout URL and svk cp URL local-branch.

* Experimental svk push and pull support.

* sync and update now supports -s and -m to sync and/or merge from
  branch source. [Autrijus]

* revert now also marks nodes as resolved.

* mirror, checkout and switch now all support --list, --detach and
  --relocate. [Autrijus]

* New aliases: cm => cmerge, depot => depotmap, sw => switch.

* Implement "svk depot --add", "svk depot --delete". [Autrijus]

* prop{get,set,edit,del} on revprops. [Autrijus]

* Fix smerge -l that trims logs before another smerge in the other
  direction.
