@@ -132,6 +132,7 @@ t/24diff.t
 t/25log.t
 t/26revert-remove.t
 t/26revert.t
+t/27mkdir.t
 t/30annotate.t
 t/31cat.t
 t/32list.t
